--- a/index.html
+++ b/index.html
@@ -7,11 +7,41 @@
   </head>
   <body>
     <div id="app">
-      <ol>
-        <li v-for="card in featuredCards">
-          {{ card.name }}
-        </li>
-      </ol>
+      <template v-for="card in featuredCards">
+        <div class="clear">
+          <div class="project-image">
+            <img class="size-thumbnail alignleft wp-image-566" :src="card.attachments[0].url" :alt="card.attachments[0].name" />
+          </div>
+          <div class="project-content">
+            <h1>
+              {{ card.name }} <span class="project-phase">Alpha</span>
+            </h1>
+            <p class="m-b-1 project-copy">
+              {{ card.desc }}
+            </p>
+            <p class="m-b-1">
+              Lead: <a href="mailto:henrik@civictech.ca.">Henrik Bechmann</a>
+            </p>
+            <p class="m-b-2">
+              Slack: <a href="https://civictechto.slack.com/archives/budgetpedia-gen">#budgetpedia-gen</a>
+            </p>
+            <div>
+              <a class="btn red-btn btn-primary custom-button no-margin margin-r-1 m-b-1" href="http://budgetpedia.ca/">
+                View the Project
+              </a>
+              <a class="btn btn-primary custom-button green-btn no-margin m-b-1" href="https://drive.google.com/drive/u/0/folders/0B208oCU9D8OuSms5bEZxcnRLZzA">Contribute on GDrive</a> <a class="btn btn-primary custom-button green-btn no-margin m-b-1" href="https://github.com/CivicTechTO/budgetcommons-dev-frontend">Contribute on Github (frontend)</a> <a class="btn btn-primary custom-button green-btn no-margin m-b-1" href="https://github.com/CivicTechTO/budgetcommons-dev-backend">
+                Contribute on Github (backend)
+              </a>
+            </div>
+            <div>
+              <a class="attribution" href="https://www.flickr.com/photos/thomashawk/5405835151/">
+                {{ card.attachments[0].name }}
+              </a>
+            </div>
+          </div>
+        </div>
+        <hr class="spacious" />
+      </template>
     </div>
 
     <script src="js/client.js"></script>
