Added a banner so that people know why the page exists.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel='stylesheet' id='zerif_bootstrap_style-css'  href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css' type='text/css' media='all' />
     <link rel='stylesheet' id='zerif_style-css'  href='css/style.css' type='text/css' media='all' />
     <link rel='stylesheet' id='zerif_responsive_style-css'  href='css/responsive.css' type='text/css' media='all' />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.2/gh-fork-ribbon.min.css" />
     <script src="//unpkg.com/vue"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/axios/0.15.2/axios.js"></script>
   </head>
   <body>
+    <a class="github-fork-ribbon" href="https://github.com/CivicTechTO/civictechto-trello-project-page-demo" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
     <div id="app">
       <div id="content" class="site-content">
         <div class="container">
