Pinned vuejs version import to vue@2.5.4

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel='stylesheet' id='zerif_style-css'  href='css/style.css' type='text/css' media='all' />
     <link rel='stylesheet' id='zerif_responsive_style-css'  href='css/responsive.css' type='text/css' media='all' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.2/gh-fork-ribbon.min.css" />
-    <script src="//unpkg.com/vue"></script>
+    <script src="//unpkg.com/vue@2.5.4"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/axios/0.15.2/axios.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/dompurify/1.0.2/purify.min.js"></script>
